# flask-image-demo

./: Dockerfile  Jenkinsfile  Readme.md  Vagrantfile  docker-compose.yaml  main.tf  pyproject.toml  setup.cfg
.github/workflow/: main.yml
.github/workflows/: main.yml
kuber/: deployment.yaml  flask-deployment.yaml  flask-ingress.yaml  flask-service.yaml  postgres-deployment.yaml
src/: app.py  client.py  server.py
src/templates/: base.html
