[tool.poetry]
name = "FlaskApp"
version = "0.1.0"
description = "Demo application"
authors = ["Кишинский Олег Викторович <OVKishinskiy@sberbank.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.25.1"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
