[tool.poetry]
name = "FlaskApp"
version = "0.1.0"
description = "Demo application"
authors = ["Кишинский Олег Викторович <OVKishinskiy@sberbank.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.25.1"
Flask-RESTful = "^0.3.9"
pydantic = "^1.8.2"
Flask-Pydantic = "^0.8.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
